# braille_ai

./: .gitignore  pyproject.toml
app/: main.py
app/api/: braille.py  test.py
braille_model/: class_indices.json
training/: generate_dataset.py  train_braille_model.py
