[project]
name = "braille-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
